// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders block button type correctly 1`] = `
<button
  className="css-7dws9z"
>
  A block button!
</button>
`;

exports[`Button renders default button type correctly 1`] = `
<button
  className="css-o8us46"
>
  A button!
</button>
`;

exports[`Button renders default button type correctly 2`] = `
<button
  className="css-3vjj9e"
>
  A button!
</button>
`;

exports[`Button renders default button type correctly 3`] = `
<button
  className="css-crszat"
>
  A button!
</button>
`;

exports[`Button renders huge button type correctly 1`] = `
<button
  className="css-11mk1t0"
>
  A huge button!
</button>
`;

exports[`Button renders native button correctly 1`] = `
<button
  className="css-o8us46"
>
  A button!
</button>
`;

exports[`ButtonLink renders link button correctly 1`] = `
<a
  className="css-o8us46"
  href="/home"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  A link button!
</a>
`;
